--- a/Notebooks/1_examine_vcf.Rmd
+++ b/Notebooks/1_examine_vcf.Rmd
@@ -11,18 +11,8 @@ output: html_notebook
 
 ##### Get a raw VCF file to practice with  
 
-If you want to read a file from a package, you can use the `system.file()` function.  
 
-Get the VCF file provided in the `cgdv17` package for one human individual (chr17).  
-```{r}
-# ?cgdv17
-# vcf_file <- system.file("vcf", "NA06985_17.vcf.gz", package = "cgdv17")
-# vcf_file
-```
-So this is just telling you where the file is that came with this package. 
-
-
-If you want to read a file that is already stored in your project directory, you can use the `here()` function.  
+We will read a file that is already stored in your project directory. You can retrieve this directory on your system using the `here()` function.  
 
 ```{r}
 proj_dir <- here() ## should be the project directory even if getwd() shows something else
@@ -41,9 +31,6 @@ R.utils::gunzip(vcf_file, skip=TRUE, remove=FALSE)
 If you open this in a text editor, you'll see a large header. Yikes!
 
 <br/>
-
-Note: you can read in different file formats or read multiple VCF files using the `vcfR` package - see the [vignette](https://cran.r-project.org/web/packages/vcfR/vignettes/intro_to_vcfR.html)!
-
 
 ##### Read the VCF into R
 
